--- a/css/style.css
+++ b/css/style.css
@@ -246,10 +246,10 @@ a:focus {
   text-align: center;
 }
 .team{
-  margin-bottom: 40px;
+  margin-bottom: 80px;
 }
 .team .inner{
-  max-width: 1250px;
+  max-width: 1024px;
 }
 .team_title{
   margin-bottom: 40px;
@@ -262,30 +262,33 @@ a:focus {
 }
 .team_list{
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 40px 3.3%;
-  margin-bottom: 90px;
+  margin-bottom: 40px;
+}
+.team_item{
+  display: flex;
+}
+.team_item-rowReverse{
+  flex-direction: row-reverse;
 }
 .team_item_figure{
-  position: relative;
-  background-color: #d9d9d9;
-  padding-bottom: 70.7%;
+  width: 45%;
 }
 .team_item_figure img{
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
   width: 100%;
   height: 100%;
-  object-position: center center;
   object-fit: cover;
+  object-position: center center;
 }
 .team_item_body{
+  width: 55%;
   background-color: #272727;
-  padding: 100px 17%;
+  padding: 70px 80px;
   color: #fff;
+}
+.team_item:nth-of-type(2) .team_item_body{
+  padding: 70px 40px;
 }
 .team_item_name{
   font-size: 28px;
@@ -463,15 +466,28 @@ a:focus {
   .team_title{
     margin-bottom: 24px;
   }
+  .team_item{
+    flex-direction: column;
+  }
   .team_list{
-    grid-template-columns: 1fr;
     margin-bottom: 40px;
+    gap: 80px 3.3%;
   }
   .team_item_figure{
-    padding-bottom: 100%;
+    width: 100%;
   }
   .team_item_body{
+    width: 100%;
     padding: 24px 4.6%;
   }
-
+  .team_item:nth-of-type(2) .team_item_body{
+    padding: 24px 4.6%;
+  }
+  .team_item_name{
+    font-size: 24px;
+    margin-bottom: 8px;
+  }
+  .team_item_text{
+    line-height: 1.15;
+  }
 }
