--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   line-height: 1.15;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
-}
+} 
 li{
   list-style: none;
 }
@@ -74,17 +74,23 @@ a:focus {
   margin-bottom: 80px;
 }
 .problem{
-  margin-bottom: 80px;
+  margin-bottom: 100px;
 }
 .problem_title{
   font-size: 32px;
-  margin-bottom: 66px;
+  margin-bottom: 40px;
   text-align: center;
+}
+.problem_text_bottom{
+  font-size: 32px;
+  text-align: center;
+  font-weight: bold;
 }
 .problem_list{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 40px 7%;
+  margin-bottom: 40px;
 }
 .problem_item{
   box-shadow: 0 0 17px 0 rgb(0 0 0 / 15%);
@@ -320,6 +326,12 @@ a:focus {
 
 
 @media screen and (max-width:769px) {
+  .pc{
+    display: none;
+  }
+  .sp{
+    display: block;
+  }
   .mv{
     margin-bottom: 40px;
   }
@@ -340,13 +352,20 @@ a:focus {
     width: 100%;
     padding: 22px 10px;
   }
+  .problem{
+    margin-bottom: 56px;
+  }
   .problem_title{
     font-size: 20px;
     margin-bottom: 24px;
   }
+  .problem_text_bottom{
+    font-size: 20px;
+  }
   .problem_list{
     grid-template-columns: 1fr;
     gap: 24px;
+    margin-bottom: 24px;
   }
   .problem_item{
     padding: 36px 8px;
